se cambia la red social

--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -34,6 +34,11 @@
 	  </header>	  
 <main>
 <section>
+	<h2></h2>
+	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
+	<p>Contenido de la sección 1</p>
+</section>
+<section>
 	<h2>Sección 1</h2>
 	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
 	<p>Contenido de la sección 1</p>
@@ -56,7 +61,7 @@
 	</main>
 	<footer>
 		<ul class="redes-sociales"> 
-			<li><a href="https://www.facebook.com/tucuenta"><img src="C:\Users\felix\OneDrive\Escritorio\fotos\Facebook_f_logo_(2019).svg.webp" alt="Facebook"></a></li>
+			<li><a href="mailto:macoemeirll@gmail.com?subject=Asunto del correo electrónico&body=Cuerpo del mensaje"><img src= "C:\Users\felix\OneDrive\Escritorio\fotos\gmail.png"></a></li>
 			<li><a href="https://wa.me/+56984745281"><img src="C:\Users\felix\OneDrive\Escritorio\fotos\what.png" alt="Whatsapp"></a></li>
 			<li><a href="https://www.instagram.com/macoem.repuestos/"><img src="C:\Users\felix\OneDrive\Escritorio\fotos\Instagram_logo_2016.svg.webp" alt="Instagram"></a></li>
 		</ul>
