--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MacoemEirl</title>
+		<title>MacoemRepuestosEirl</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Enlaces a archivos CSS -->
@@ -14,50 +14,119 @@
 		<script src="scripts.js"></script>
 	</head>	
 <body>
-	<!-- Contenido principal de la landing page -->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
-		  <a class="navbar-brand" href="#">MacoemEirl</a>
+		  <a class="navbar-brand" href="#">
+			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\dd7e28bd-8e6d-4707-93bd-b8b51e555661.jpg" alt="Logo de la empresa">
+		  </a>         
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-			  <li class="nav-item"><a class="nav-link" href="#seccion1">Sección 1</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#seccion2">Sección 2</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#seccion3">Sección 3</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#seccion4">Sección 4</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#seccion5">Sección 5</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#quienes-somos">Quienes Somos</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#contactanos">Contáctanos</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#ubicacion">Ubicación</a></li>
 			</ul>
 		  </div>
 		</nav>
-	  </header>	  
+	  </header> 
 <main>
-<section>
-	<h2></h2>
-	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
-	<p>Contenido de la sección 1</p>
+<section id="quienes-somos">
+	<div class="container">
+		<h2>Quiénes somos</h2>
+		<p>En MacoemRepuestos somos una empresa dedicada a la venta de repuestos automotrices de alta calidad. A pesar de que somos una empresa joven, hemos logrado establecernos como una opción confiable para aquellos que buscan repuestos de calidad a precios competitivos.</p>
+		<p>Nuestro equipo de expertos en mecánica automotriz está siempre dispuesto a ayudar a nuestros clientes a encontrar la pieza que necesitan para sus vehículos. Nos enorgullece servir a nuestros clientes y estamos comprometidos con su satisfacción.</p>
+		<p>En MacoemEirl estamos siempre en busca de nuevas formas de mejorar y crecer para poder seguir brindando el mejor servicio a nuestros clientes. ¡Gracias por confiar en nosotros!</p>
+	</div>
 </section>
-<section>
-	<h2>Sección 1</h2>
-	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
-	<p>Contenido de la sección 1</p>
+<section id="testimonios">
+	<div class="container">
+	  <h2>Testimonios</h2>
+	  <div class="row">
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/mecanico-automoviles-sonriente-llave-pie-manos-dobladas-sobre-fondo-blanco_662251-2939.jpg?w=1060&t=st=1682713246~exp=1682713846~hmac=2f508dccfa72bc482e5de3ffa56cb6ea497bf075141b221d19ac797c548cedca" alt="Foto del cliente 1">
+			<p class="nombre">Juan Pérez</p>
+			<p class="contenido">"La experiencia con Macoem ha sido excelente. Siempre encuentro lo que necesito y a precios muy competitivos. Los recomiendo 100%."</p>
+		  </div>
+		</div>
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/retrato-mujer-que-trabaja-servicio-coche_23-2148826525.jpg?w=900&t=st=1682713190~exp=1682713790~hmac=6e8a6717d11c009d23b0678c73e4a5749d5bb84db178511a15accba3a18fec07" alt="Foto del cliente 2">
+			<p class="nombre">María Rodríguez</p>
+			<p class="contenido">"Como mecánica, siempre estoy buscando repuestos de calidad para mis clientes. Macoem me ha ayudado mucho en mi trabajo y me ha ahorrado tiempo y dinero."</p>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </section>  
+<section id="productos">
+	<div class="container">
+		<h2>Algunos productos que vendemos</h2>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="https://http2.mlstatic.com/D_NQ_NP_628814-MLC41815363681_052020-O.webp" alt="Aceite de motor">
+					<div class="card-body">
+						<h5 class="card-title">Aceite de motor</h5>
+						<p class="card-text">El aceite de motor es un lubricante esencial para el funcionamiento adecuado del motor de un automóvil. Ayuda a reducir la fricción y el desgaste en las piezas móviles del motor, evita la acumulación de suciedad y depósitos, y mantiene la temperatura del motor bajo control. Elegir el aceite de motor adecuado es importante para maximizar el rendimiento del vehículo y prolongar su vida útil.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="https://sodimac.scene7.com/is/image/SodimacCL/884979_00?wid=800&hei=800&qlt=70" alt="Batería para auto">
+					<div class="card-body">
+						<h5 class="card-title">Batería para auto</h5>
+						<p class="card-text">La batería de un automóvil es un dispositivo electroquímico que almacena energía eléctrica y suministra corriente eléctrica para arrancar el motor y alimentar los componentes eléctricos del vehículo cuando el motor no está en marcha. Es esencial para el funcionamiento del automóvil y su mantenimiento adecuado es crucial para garantizar su durabilidad y fiabilidad.</p>
+					</div>
+				</div>
+			</div>
+				<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="https://acnews.blob.core.windows.net/imgnews/extralarge/NAZ_f5cc5af163d04d1c8e5c851f2ded9a87.jpg" alt="Filtros de Aire">
+					<div class="card-body">
+						<h5 class="card-title">Filtros de Aire</h5>
+						<p class="card-text">El filtro de aire es un componente importante del motor del automóvil que se encarga de filtrar el aire que entra al motor para protegerlo de partículas dañinas y evitar que ingresen al sistema de combustión. De esta manera, asegura una combustión más eficiente y una vida útil más larga del motor.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 </section>
-<section>
-	<h2>Sección 2</h2>
-	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
-	<p>Contenido de la sección 2</p>
-</section>
-<section>
-	<h2>Sección 3</h2>
-	<img src="ruta/a/la/imagen1.jpg" alt="Descripción de la imagen 1">
-	<p>Contenido de la sección 3</p>
-</section>
-<section>
-    <h2>¿En donde estamos?</h2>
-    <p>Estamos ubicados en Atacama 396, Copiapó</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3543.3135853760423!2d-70.33922532458799!3d-27.36592037637991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9698038a03a84b57%3A0xa4b53d25e1e81ff0!2sAtacama%20396%2C%201530538%20Copiap%C3%B3%2C%20Atacama!5e0!3m2!1ses!2scl!4v1682644251991!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>				
+<section id="contactanos">
+	<h2>Contáctanos</h2>
+	<form id="contact-form">
+	  <div class="form-group">
+		<label for="name">Nombre:</label>
+		<input type="text" id="name" name="name" required>
+	  </div>
+	  <div class="form-group">
+		<label for="email">Correo electrónico:</label>
+		<input type="email" id="email" name="email" required>
+	  </div>
+	  <div class="form-group">
+		<label for="phone">Número de teléfono:</label>
+		<input type="tel" id="phone" name="phone">
+	  </div>
+	  <div class="form-group">
+		<label for="message">Pregunta o comentario:</label>
+		<textarea id="message" name="message" required></textarea>
+	  </div>
+	  <button type="submit">Enviar</button>
+	</form>
+  </section>
+  <section id="ubicacion">
+	<div class="container">
+	  <h2 class="section-title">¿Dónde estamos ubicados?</h2>
+	  <p class="section-description">Nos encontramos en Atacama 396, Copiapó</p>
+	  <div class="map-container">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3543.3135853760423!2d-70.33922532458799!3d-27.36592037637991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9698038a03a84b57%3A0xa4b53d25e1e81ff0!2sAtacama%20396%2C%201530538%20Copiap%C3%B3%2C%20Atacama!5e0!3m2!1ses!2scl!4v1682644251991!5m2!1ses!2scl" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	  </div>
+	</div>
+  </section>				  
 	</main>
 	<footer>
 		<ul class="redes-sociales"> 
