Se actualiza el Codigo Nuevamente

--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MacoemRepuestosEirl</title>
+		<title>MacoemRepuestos</title>
+		<link rel="icon" href="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" type="image/png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Enlaces a archivos CSS -->
@@ -12,12 +13,14 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		<script src="scripts.js"></script>
+		<!--Enlace biblioteca Font Awesome-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 	</head>	
 <body>
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 		  <a class="navbar-brand" href="#">
-			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\dd7e28bd-8e6d-4707-93bd-b8b51e555661.jpg" alt="Logo de la empresa">
+			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
 		  </a>         
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
@@ -49,14 +52,14 @@
 		<div class="col-md-6">
 		  <div class="testimonio">
 			<img src="https://img.freepik.com/foto-gratis/mecanico-automoviles-sonriente-llave-pie-manos-dobladas-sobre-fondo-blanco_662251-2939.jpg?w=1060&t=st=1682713246~exp=1682713846~hmac=2f508dccfa72bc482e5de3ffa56cb6ea497bf075141b221d19ac797c548cedca" alt="Foto del cliente 1">
-			<p class="nombre">Juan Pérez</p>
+			<p class="nombre">Jose Juan Raya</p>
 			<p class="contenido">"La experiencia con Macoem ha sido excelente. Siempre encuentro lo que necesito y a precios muy competitivos. Los recomiendo 100%."</p>
 		  </div>
 		</div>
 		<div class="col-md-6">
 		  <div class="testimonio">
 			<img src="https://img.freepik.com/foto-gratis/retrato-mujer-que-trabaja-servicio-coche_23-2148826525.jpg?w=900&t=st=1682713190~exp=1682713790~hmac=6e8a6717d11c009d23b0678c73e4a5749d5bb84db178511a15accba3a18fec07" alt="Foto del cliente 2">
-			<p class="nombre">María Rodríguez</p>
+			<p class="nombre">Micaela Rus</p>
 			<p class="contenido">"Como mecánica, siempre estoy buscando repuestos de calidad para mis clientes. Macoem me ha ayudado mucho en mi trabajo y me ha ahorrado tiempo y dinero."</p>
 		  </div>
 		</div>
@@ -69,28 +72,28 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="https://http2.mlstatic.com/D_NQ_NP_628814-MLC41815363681_052020-O.webp" alt="Aceite de motor">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\315674354_479224974187480_903150178947587855_n.jpg" alt="Bandeja RH LH">
 					<div class="card-body">
-						<h5 class="card-title">Aceite de motor</h5>
-						<p class="card-text">El aceite de motor es un lubricante esencial para el funcionamiento adecuado del motor de un automóvil. Ayuda a reducir la fricción y el desgaste en las piezas móviles del motor, evita la acumulación de suciedad y depósitos, y mantiene la temperatura del motor bajo control. Elegir el aceite de motor adecuado es importante para maximizar el rendimiento del vehículo y prolongar su vida útil.</p>
+						<h5 class="card-title">Bandeja RH LH</h5>
+						<p class="card-text">La bandeja RH/LH es una pieza importante del sistema de suspensión delantera del vehículo, que ayuda a mantener la estabilidad y el control durante la conducción. Para tu aplicación en específico, te recomiendo la bandeja de suspensión delantera de la marca MOOG. Esta marca es conocida por su calidad y durabilidad, y ofrece una garantía limitada de por vida en sus productos. Además, la bandeja de suspensión MOOG está diseñada específicamente para los modelos de Chevrolet Aveo y Chevrolet Sail 1.4, por lo que puedes estar seguro de que se ajustará perfectamente a tu vehículo.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="https://sodimac.scene7.com/is/image/SodimacCL/884979_00?wid=800&hei=800&qlt=70" alt="Batería para auto">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\314449962_629516332296092_5577945818545484395_n.jpg" alt="Bomba agua Gmb">
 					<div class="card-body">
-						<h5 class="card-title">Batería para auto</h5>
-						<p class="card-text">La batería de un automóvil es un dispositivo electroquímico que almacena energía eléctrica y suministra corriente eléctrica para arrancar el motor y alimentar los componentes eléctricos del vehículo cuando el motor no está en marcha. Es esencial para el funcionamiento del automóvil y su mantenimiento adecuado es crucial para garantizar su durabilidad y fiabilidad.</p>
+						<h5 class="card-title">Bomba agua Gmb</h5>
+						<p class="card-text">La bomba de agua GMB es un componente de alta calidad diseñado para su uso en el motor V6 VQ35DE de 3.5 litros de la Nissan Murano. Esta bomba de agua es esencial para mantener el motor en funcionamiento adecuado y prevenir el sobrecalentamiento. Está fabricada con materiales de alta calidad y cuenta con un diseño que maximiza la eficiencia y la durabilidad. La bomba de agua GMB es una excelente opción para aquellos propietarios de Nissan Murano que buscan una pieza de repuesto confiable y de alta calidad.</p>
 					</div>
 				</div>
 			</div>
 				<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="https://acnews.blob.core.windows.net/imgnews/extralarge/NAZ_f5cc5af163d04d1c8e5c851f2ded9a87.jpg" alt="Filtros de Aire">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\308499199_1209659906266886_8724508499833625115_n.jpg" alt="Kit embrage 3piezas, LUK">
 					<div class="card-body">
-						<h5 class="card-title">Filtros de Aire</h5>
-						<p class="card-text">El filtro de aire es un componente importante del motor del automóvil que se encarga de filtrar el aire que entra al motor para protegerlo de partículas dañinas y evitar que ingresen al sistema de combustión. De esta manera, asegura una combustión más eficiente y una vida útil más larga del motor.</p>
+						<h5 class="card-title">Kit embrage 3piezas, LUK</h5>
+						<p class="card-text">El kit de embrague LUK de tres piezas para aplicaciones en vehículos Mahindra Pik Up 2.2 y Mahindra Scorpio 2.2 del año 2011 al 2014 está diseñado con materiales de alta calidad para proporcionar una operación suave y confiable. El kit incluye un disco de embrague, un plato de presión y un cojinete de empuje, todos fabricados con precisión para garantizar un ajuste perfecto en el sistema de transmisión del vehículo. Este kit de embrague LUK ofrece una excelente capacidad de sujeción y un rendimiento duradero para un rendimiento óptimo del vehículo.</p>
 					</div>
 				</div>
 			</div>
@@ -129,12 +132,34 @@
   </section>				  
 	</main>
 	<footer>
-		<ul class="redes-sociales"> 
-			<li><a href="mailto:macoemeirll@gmail.com?subject=Asunto del correo electrónico&body=Cuerpo del mensaje"><img src= "C:\Users\felix\OneDrive\Escritorio\fotos\gmail.png"></a></li>
-			<li><a href="https://wa.me/+56984745281"><img src="C:\Users\felix\OneDrive\Escritorio\fotos\what.png" alt="Whatsapp"></a></li>
-			<li><a href="https://www.instagram.com/macoem.repuestos/"><img src="C:\Users\felix\OneDrive\Escritorio\fotos\Instagram_logo_2016.svg.webp" alt="Instagram"></a></li>
-		</ul>
-	</footer>
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-4">
+			  <h4>Información de contacto</h4>
+			  <p>Dirección: Atacama 396, Copiapó</p>
+			  <p>Teléfono: +56 9 8474 5281</p>
+			  <p>Email: macoemeirll@gmail.com</p>
+			</div>
+			<div class="col-md-4">
+			  <h4>Horario de atención</h4>
+			  <p>Lunes a viernes: 9:00 AM - 18:00 PM</p>
+			  <p>Sábados: 9:00 AM - 14:00 PM</p>
+			  <p>Domingos: Cerrado</p>
+			</div>
+			<div class="col-md-4">
+			  <h4>Síguenos y contáctanos en nuestras redes sociales</h4>
+			  <ul>
+				<div class="social-icons">
+					<a href="https://api.whatsapp.com/send?phone=56984745281"><i class="fab fa-whatsapp"></i></a>
+					<a href="https://www.instagram.com/macoem.repuestos/"><i class="fab fa-instagram"></i></a>
+					<a href="mailto:macoemeirll@gmail.com"><i class="far fa-envelope"></i></a>
+				  </div>									
+			  </ul>
+			</div>
+		  </div>
+		</div>
+	  </footer>
+	  
 	
 	<!-- Enlaces a archivos JavaScript -->
 	<script src="scripts.js"></script>
