SE CAMBIAN PARTES DEL CODIGO

--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -13,11 +13,13 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		<script src="scripts.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="menu.js"></script>
 		<!--Enlace biblioteca Font Awesome-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 	</head>	
 <body>
-	<header>
+	<header class="header">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 		  <a class="navbar-brand" href="#">
 			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
@@ -35,7 +37,8 @@
 			</ul>
 		  </div>
 		</nav>
-	  </header> 
+	  </header>
+	  
 <main>
 <section id="quienes-somos">
 	<div class="container">
