Cambio CSS y HTML
se cambia de posicion 2 secciones

--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -48,27 +48,6 @@
 		<p>En MacoemEirl estamos siempre en busca de nuevas formas de mejorar y crecer para poder seguir brindando el mejor servicio a nuestros clientes. ¡Gracias por confiar en nosotros!</p>
 	</div>
 </section>
-<section id="testimonios">
-	<div class="container">
-	  <h2>Testimonios</h2>
-	  <div class="row">
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/mecanico-automoviles-sonriente-llave-pie-manos-dobladas-sobre-fondo-blanco_662251-2939.jpg?w=1060&t=st=1682713246~exp=1682713846~hmac=2f508dccfa72bc482e5de3ffa56cb6ea497bf075141b221d19ac797c548cedca" alt="Foto del cliente 1">
-			<p class="nombre">Jose Juan Raya</p>
-			<p class="contenido">"La experiencia con Macoem ha sido excelente. Siempre encuentro lo que necesito y a precios muy competitivos. Los recomiendo 100%."</p>
-		  </div>
-		</div>
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/retrato-mujer-que-trabaja-servicio-coche_23-2148826525.jpg?w=900&t=st=1682713190~exp=1682713790~hmac=6e8a6717d11c009d23b0678c73e4a5749d5bb84db178511a15accba3a18fec07" alt="Foto del cliente 2">
-			<p class="nombre">Micaela Rus</p>
-			<p class="contenido">"Como mecánica, siempre estoy buscando repuestos de calidad para mis clientes. Macoem me ha ayudado mucho en mi trabajo y me ha ahorrado tiempo y dinero."</p>
-		  </div>
-		</div>
-	  </div>
-	</div>
-  </section>  
 <section id="productos">
 	<div class="container">
 		<h2>Algunos productos que vendemos</h2>
@@ -101,7 +80,43 @@
 				</div>
 			</div>
 		</div>
-</section>
+</section> 
+<section id="testimonios">
+	<div class="container">
+	  <h2>Testimonios</h2>
+	  <div class="row">
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/mecanico-automoviles-sonriente-llave-pie-manos-dobladas-sobre-fondo-blanco_662251-2939.jpg?w=1060&t=st=1682713246~exp=1682713846~hmac=2f508dccfa72bc482e5de3ffa56cb6ea497bf075141b221d19ac797c548cedca" alt="Foto del cliente 1">
+			<p class="nombre">Jose Juan Raya</p>
+			<p class="contenido">"La experiencia con Macoem ha sido excelente. Siempre encuentro lo que necesito y a precios muy competitivos. Los recomiendo 100%."</p>
+		  </div>
+		</div>
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/retrato-mujer-que-trabaja-servicio-coche_23-2148826525.jpg?w=900&t=st=1682713190~exp=1682713790~hmac=6e8a6717d11c009d23b0678c73e4a5749d5bb84db178511a15accba3a18fec07" alt="Foto del cliente 2">
+			<p class="nombre">Micaela Rus</p>
+			<p class="contenido">"Como mecánica, siempre estoy buscando repuestos de calidad para mis clientes. Macoem me ha ayudado mucho en mi trabajo y me ha ahorrado tiempo y dinero."</p>
+		  </div>
+		</div>
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/composicion-moderna-mecanico-automoviles_23-2147881745.jpg?w=1060&t=st=1682872645~exp=1682873245~hmac=4a0d59b92c80d26f3c9e76134711ca6e9f9e262bd5ba4399b0671e3949b84391" alt="Foto del cliente 3">
+			<p class="nombre">Carlos Jiménez</p>
+			<p class="contenido">"Encontré el repuesto que necesitaba en Macoem y lo recibí en tiempo récord. El servicio al cliente es excepcional, lo recomiendo ampliamente."</p>
+		  </div>
+		</div>
+		<div class="col-md-6">
+		  <div class="testimonio">
+			<img src="https://img.freepik.com/foto-gratis/mecanico-femenino-llaves-posando-autoservicio_7502-4437.jpg?w=1060&t=st=1682872843~exp=1682873443~hmac=e504ad97de30d93758510d40b985beda991a13c44d2666160c89283fab538d37" alt="Foto del cliente 4">
+			<p class="nombre">Ana Torres</p>
+			<p class="contenido">"Me encanta la variedad de repuestos y accesorios que tienen en Macoem. Siempre encuentro lo que necesito y a precios muy competitivos."</p>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </section>
+  
 <section id="contactanos">
 	<h2>Contáctanos</h2>
 	<form id="contact-form">
