--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -17,13 +17,14 @@
 		<script src="menu.js"></script>
 		<!--Enlace biblioteca Font Awesome-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qzOgXm9n2CkK7T9kE8e5B1Mc52pWy/6zYmPawAUm2rXOe9DFmtvYY5dIHvuWwM+a" crossorigin="anonymous">
 	</head>	
 <body>
-	<header class="header">
+	<header class="header header-red">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 		  <a class="navbar-brand" href="#">
 			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
-		  </a>         
+		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
@@ -35,10 +36,20 @@
 			  <li class="nav-item"><a class="nav-link" href="#contactanos">Contáctanos</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#ubicacion">Ubicación</a></li>
 			</ul>
+			<ul class="navbar-nav ml-auto">
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="shareMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				  Compartir
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tusitio.com&amp;quote=Mensaje%20para%20compartir%20tu%20sitio%20web" target="_blank"><i class="fab fa-facebook"></i>Facebook</a>
+					<a class="dropdown-item" href="https://www.instagram.com/?url=https%3A%2F%2Fwww.tusitio.com" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+				  </div>
+				</li>
+			  </ul>
 		  </div>
 		</nav>
-	  </header>
-	  
+	  </header>  
 <main>
 <section id="quienes-somos">
 	<div class="container">
@@ -177,9 +188,5 @@
 		  </div>
 		</div>
 	  </footer>
-	  
-	
-	<!-- Enlaces a archivos JavaScript -->
-	<script src="scripts.js"></script>
 </body>
 </html>
