--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -31,7 +31,7 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item"><a class="nav-link" href="#quienes-somos">Quienes Somos</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#marcas">Marcas</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#contactanos">Contáctanos</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#ubicacion">Ubicación</a></li>
@@ -92,42 +92,53 @@
 			</div>
 		</div>
 </section> 
-<section id="testimonios">
+<section id="marcas">
 	<div class="container">
-	  <h2>Testimonios</h2>
+	  <h2>Marcas con las que trabajamos</h2>
 	  <div class="row">
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/mecanico-automoviles-sonriente-llave-pie-manos-dobladas-sobre-fondo-blanco_662251-2939.jpg?w=1060&t=st=1682713246~exp=1682713846~hmac=2f508dccfa72bc482e5de3ffa56cb6ea497bf075141b221d19ac797c548cedca" alt="Foto del cliente 1">
-			<p class="nombre">Jose Juan Raya</p>
-			<p class="contenido">"La experiencia con Macoem ha sido excelente. Siempre encuentro lo que necesito y a precios muy competitivos. Los recomiendo 100%."</p>
+		<div class="col-md-3">
+		  <div class="marca">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Ford_logo_flat.svg/2560px-Ford_logo_flat.svg.png" alt="Logo de Ford">
 		  </div>
 		</div>
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/retrato-mujer-que-trabaja-servicio-coche_23-2148826525.jpg?w=900&t=st=1682713190~exp=1682713790~hmac=6e8a6717d11c009d23b0678c73e4a5749d5bb84db178511a15accba3a18fec07" alt="Foto del cliente 2">
-			<p class="nombre">Micaela Rus</p>
-			<p class="contenido">"Como mecánica, siempre estoy buscando repuestos de calidad para mis clientes. Macoem me ha ayudado mucho en mi trabajo y me ha ahorrado tiempo y dinero."</p>
+		<div class="col-md-3">
+		  <div class="marca">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Nissan_logo.png" alt="Logo de Nissan">
 		  </div>
 		</div>
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/composicion-moderna-mecanico-automoviles_23-2147881745.jpg?w=1060&t=st=1682872645~exp=1682873245~hmac=4a0d59b92c80d26f3c9e76134711ca6e9f9e262bd5ba4399b0671e3949b84391" alt="Foto del cliente 3">
-			<p class="nombre">Carlos Jiménez</p>
-			<p class="contenido">"Encontré el repuesto que necesitaba en Macoem y lo recibí en tiempo récord. El servicio al cliente es excepcional, lo recomiendo ampliamente."</p>
+		<div class="col-md-3">
+		  <div class="marca">
+			<img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c479.png" alt="Logo de Chevrolet">
 		  </div>
 		</div>
-		<div class="col-md-6">
-		  <div class="testimonio">
-			<img src="https://img.freepik.com/foto-gratis/mecanico-femenino-llaves-posando-autoservicio_7502-4437.jpg?w=1060&t=st=1682872843~exp=1682873443~hmac=e504ad97de30d93758510d40b985beda991a13c44d2666160c89283fab538d37" alt="Foto del cliente 4">
-			<p class="nombre">Ana Torres</p>
-			<p class="contenido">"Me encanta la variedad de repuestos y accesorios que tienen en Macoem. Siempre encuentro lo que necesito y a precios muy competitivos."</p>
+		<div class="col-md-3">
+		  <div class="marca">
+			<img src="https://assets.stickpng.com/images/580b585b2edbce24c47b2cf2.png" alt="Logo de Volkswagen">
 		  </div>
 		</div>
+		<div class="col-md-3">
+			<div class="marca">
+			  <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c4a3.png" alt="Logo de Toyota">
+			</div>
+		  </div>
+		  <div class="col-md-3">
+			<div class="marca">
+			  <img src="https://pngimg.com/uploads/bmw_logo/bmw_logo_PNG19701.png" alt="Logo de BMW">
+			</div>
+		  </div>
+		  <div class="col-md-3">
+			<div class="marca">
+			  <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c482.png" alt="Logo de Hyundai">
+			</div>
+		  </div>
+		  <div class="col-md-3">
+			<div class="marca">
+			  <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c493.png" alt="Logo de Mercedes-Benz">
+			</div>
+		  </div>
 	  </div>
 	</div>
-  </section>
-  
+</section> 
 <section id="contactanos">
 	<h2>Contáctanos</h2>
 	<form id="contact-form">
