--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MacoemRepuestos</title>
+		<title>Macoem Repuestos⚙️</title>
 		<link rel="icon" href="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" type="image/png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		<script src="scripts.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="menu.js"></script>
 		<!--Enlace biblioteca Font Awesome-->
@@ -20,14 +19,15 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qzOgXm9n2CkK7T9kE8e5B1Mc52pWy/6zYmPawAUm2rXOe9DFmtvYY5dIHvuWwM+a" crossorigin="anonymous">
 	</head>	
 <body>
+	<div id="top"></div>
 	<header class="header header-red">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
-		  <a class="navbar-brand" href="#">
+		  <a class="navbar-brand" href="#top">
 			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
-		  </button>
+		</button>
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item"><a class="nav-link" href="#quienes-somos">Quienes Somos</a></li>
@@ -54,9 +54,9 @@
 <section id="quienes-somos">
 	<div class="container">
 		<h2>Quiénes somos</h2>
-		<p>En MacoemRepuestos somos una empresa dedicada a la venta de repuestos automotrices de alta calidad. A pesar de que somos una empresa joven, hemos logrado establecernos como una opción confiable para aquellos que buscan repuestos de calidad a precios competitivos.</p>
+		<p>En Macoem Repuestos somos una empresa dedicada a la venta de repuestos automotrices de alta calidad. A pesar de que somos una empresa joven, hemos logrado establecernos como una opción confiable para aquellos que buscan repuestos de calidad a precios competitivos.</p>
 		<p>Nuestro equipo de expertos en mecánica automotriz está siempre dispuesto a ayudar a nuestros clientes a encontrar la pieza que necesitan para sus vehículos. Nos enorgullece servir a nuestros clientes y estamos comprometidos con su satisfacción.</p>
-		<p>En MacoemEirl estamos siempre en busca de nuevas formas de mejorar y crecer para poder seguir brindando el mejor servicio a nuestros clientes. ¡Gracias por confiar en nosotros!</p>
+		<p>En Macoem Repuestos estamos siempre en busca de nuevas formas de mejorar y crecer para poder seguir brindando el mejor servicio a nuestros clientes. ¡Gracias por confiar en nosotros!</p>
 	</div>
 </section>
 <section id="productos">
