ULTIMOS ARREGLOS DE CSS Y HTML

--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -67,8 +67,8 @@
 				<div class="card">
 					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\315674354_479224974187480_903150178947587855_n.jpg" alt="Bandeja RH LH">
 					<div class="card-body">
-						<h5 class="card-title">Bandeja RH LH</h5>
-						<p class="card-text">La bandeja RH/LH es una pieza importante del sistema de suspensión delantera del vehículo, que ayuda a mantener la estabilidad y el control durante la conducción. Para tu aplicación en específico, te recomiendo la bandeja de suspensión delantera de la marca MOOG. Esta marca es conocida por su calidad y durabilidad, y ofrece una garantía limitada de por vida en sus productos. Además, la bandeja de suspensión MOOG está diseñada específicamente para los modelos de Chevrolet Aveo y Chevrolet Sail 1.4, por lo que puedes estar seguro de que se ajustará perfectamente a tu vehículo.</p>
+						<h5 class="card-title">Bandeja RH/LH</h5>
+						<p class="card-text">La bandeja RH/LH es una pieza esencial de la suspensión delantera del vehículo para mantener la estabilidad y control. Recomiendo la bandeja de suspensión delantera MOOG por su calidad y durabilidad, garantía limitada de por vida y ajuste perfecto en Chevrolet Aveo y Sail 1.4.</p>
 					</div>
 				</div>
 			</div>
@@ -77,7 +77,7 @@
 					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\314449962_629516332296092_5577945818545484395_n.jpg" alt="Bomba agua Gmb">
 					<div class="card-body">
 						<h5 class="card-title">Bomba agua Gmb</h5>
-						<p class="card-text">La bomba de agua GMB es un componente de alta calidad diseñado para su uso en el motor V6 VQ35DE de 3.5 litros de la Nissan Murano. Esta bomba de agua es esencial para mantener el motor en funcionamiento adecuado y prevenir el sobrecalentamiento. Está fabricada con materiales de alta calidad y cuenta con un diseño que maximiza la eficiencia y la durabilidad. La bomba de agua GMB es una excelente opción para aquellos propietarios de Nissan Murano que buscan una pieza de repuesto confiable y de alta calidad.</p>
+						<p class="card-text">La bomba de agua GMB es una pieza esencial para mantener el motor V6 VQ35DE de 3.5L de la Nissan Murano en buen estado. Es de alta calidad, duradera y está diseñada específicamente para maximizar la eficiencia y prevenir el sobrecalentamiento.</p>
 					</div>
 				</div>
 			</div>
@@ -85,8 +85,8 @@
 				<div class="card">
 					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\308499199_1209659906266886_8724508499833625115_n.jpg" alt="Kit embrage 3piezas, LUK">
 					<div class="card-body">
-						<h5 class="card-title">Kit embrage 3piezas, LUK</h5>
-						<p class="card-text">El kit de embrague LUK de tres piezas para aplicaciones en vehículos Mahindra Pik Up 2.2 y Mahindra Scorpio 2.2 del año 2011 al 2014 está diseñado con materiales de alta calidad para proporcionar una operación suave y confiable. El kit incluye un disco de embrague, un plato de presión y un cojinete de empuje, todos fabricados con precisión para garantizar un ajuste perfecto en el sistema de transmisión del vehículo. Este kit de embrague LUK ofrece una excelente capacidad de sujeción y un rendimiento duradero para un rendimiento óptimo del vehículo.</p>
+						<h5 class="card-title">Kit embrage 3 piezas, LUK</h5>
+						<p class="card-text">Kit de embrague LUK de alta calidad de tres piezas para Mahindra Pik Up 2.2 y Mahindra Scorpio 2.2 del 2011 al 2014. Proporciona operación suave y confiable con excelente capacidad de sujeción y rendimiento duradero. Incluye disco de embrague, plato de presión y cojinete de empuje.</p>
 					</div>
 				</div>
 			</div>
@@ -184,7 +184,9 @@
 			  <h4>Horario de atención</h4>
 			  <p>Lunes a viernes: 9:00 AM - 18:00 PM</p>
 			  <p>Sábados: 9:00 AM - 14:00 PM</p>
-			  <p>Domingos: Cerrado</p>
+			  <p>Domingos: Cerrado
+				<p>Festivos/Feriados: Cerrado </p>
+			  </p>
 			</div>
 			<div class="col-md-4">
 			  <h4>Síguenos y contáctanos en nuestras redes sociales</h4>
