--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Macoem Repuestos⚙️</title>
-		<link rel="icon" href="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" type="image/png">
+		<link rel="icon" href="C:\Users\felix\OneDrive\Escritorio\PROGRA\LANDING HTML\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" type="image/png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Enlaces a archivos CSS -->
@@ -13,7 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="menu.js"></script>
+		<script src="script.js"></script>
 		<!--Enlace biblioteca Font Awesome-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-qzOgXm9n2CkK7T9kE8e5B1Mc52pWy/6zYmPawAUm2rXOe9DFmtvYY5dIHvuWwM+a" crossorigin="anonymous">
@@ -23,7 +23,7 @@
 	<header class="header header-red">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 		  <a class="navbar-brand" href="#top">
-			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
+			<img class="logo" src="C:\Users\felix\OneDrive\Escritorio\PROGRA\LANDING HTML\fotos\WhatsApp Image 2023-04-29 at 18.07.12-fotor-bg-remover-2023042918657.png" alt="Logo de la empresa">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\315674354_479224974187480_903150178947587855_n.jpg" alt="Bandeja RH LH">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\PROGRA\LANDING HTML\fotos\315674354_479224974187480_903150178947587855_n.jpg" alt="Bandeja RH LH">
 					<div class="card-body">
 						<h5 class="card-title">Bandeja RH/LH</h5>
 						<p class="card-text">La bandeja RH/LH es una pieza esencial de la suspensión delantera del vehículo para mantener la estabilidad y control. Recomiendo la bandeja de suspensión delantera MOOG por su calidad y durabilidad, garantía limitada de por vida y ajuste perfecto en Chevrolet Aveo y Sail 1.4.</p>
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\314449962_629516332296092_5577945818545484395_n.jpg" alt="Bomba agua Gmb">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\PROGRA\LANDING HTML\fotos\314449962_629516332296092_5577945818545484395_n.jpg" alt="Bomba agua Gmb">
 					<div class="card-body">
 						<h5 class="card-title">Bomba agua Gmb</h5>
 						<p class="card-text">La bomba de agua GMB es una pieza esencial para mantener el motor V6 VQ35DE de 3.5L de la Nissan Murano en buen estado. Es de alta calidad, duradera y está diseñada específicamente para maximizar la eficiencia y prevenir el sobrecalentamiento.</p>
@@ -83,7 +83,7 @@
 			</div>
 				<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\fotos\308499199_1209659906266886_8724508499833625115_n.jpg" alt="Kit embrage 3piezas, LUK">
+					<img class="card-img-top" src="C:\Users\felix\OneDrive\Escritorio\PROGRA\LANDING HTML\fotos\308499199_1209659906266886_8724508499833625115_n.jpg" alt="Kit embrage 3piezas, LUK">
 					<div class="card-body">
 						<h5 class="card-title">Kit embrage 3 piezas, LUK</h5>
 						<p class="card-text">Kit de embrague LUK de alta calidad de tres piezas para Mahindra Pik Up 2.2 y Mahindra Scorpio 2.2 del 2011 al 2014. Proporciona operación suave y confiable con excelente capacidad de sujeción y rendimiento duradero. Incluye disco de embrague, plato de presión y cojinete de empuje.</p>
