--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -28,6 +28,8 @@
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+		<button id="toggle-mode">Tema</button>
+		<button id="font-button" onclick="changeFontSize()">Fuente</button>
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item"><a class="nav-link" href="#quienes-somos">Quienes Somos</a></li>
@@ -156,7 +158,7 @@
 	  </div>
 	  <div class="form-group">
 		<label for="message">Pregunta o comentario:</label>
-		<textarea id="message" name="message" required></textarea>
+		<textarea type= "textarea" id="message" name="message" required></textarea>
 	  </div>
 	  <button type="submit">Enviar</button>
 	</form>
