--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -35,7 +35,7 @@
 			  <li class="nav-item"><a class="nav-link" href="#quienes-somos">Quienes Somos</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#marcas">Marcas</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-			  <li class="nav-item"><a class="nav-link" href="#contactanos">Contáctanos</a></li>
+			  <li class="nav-item"><a class="nav-link" href="#registros">Registros</a></li>
 			  <li class="nav-item"><a class="nav-link" href="#ubicacion">Ubicación</a></li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
@@ -55,7 +55,7 @@
 <main>
 <section id="quienes-somos">
 	<div class="container">
-		<h2>Quiénes somos</h2>
+		<h2><b>Quiénes somos</b></h2><br>
 		<p>En Macoem Repuestos somos una empresa dedicada a la venta de repuestos automotrices de alta calidad. A pesar de que somos una empresa joven, hemos logrado establecernos como una opción confiable para aquellos que buscan repuestos de calidad a precios competitivos.</p>
 		<p>Nuestro equipo de expertos en mecánica automotriz está siempre dispuesto a ayudar a nuestros clientes a encontrar la pieza que necesitan para sus vehículos. Nos enorgullece servir a nuestros clientes y estamos comprometidos con su satisfacción.</p>
 		<p>En Macoem Repuestos estamos siempre en busca de nuevas formas de mejorar y crecer para poder seguir brindando el mejor servicio a nuestros clientes. ¡Gracias por confiar en nosotros!</p>
@@ -141,28 +141,12 @@
 	  </div>
 	</div>
 </section> 
-<section id="contactanos">
-	<h2>Contáctanos</h2>
-	<form id="contact-form">
-	  <div class="form-group">
-		<label for="name">Nombre:</label>
-		<input type="text" id="name" name="name" required>
-	  </div>
-	  <div class="form-group">
-		<label for="email">Correo electrónico:</label>
-		<input type="email" id="email" name="email" required>
-	  </div>
-	  <div class="form-group">
-		<label for="phone">Número de teléfono:</label>
-		<input type="tel" id="phone" name="phone">
-	  </div>
-	  <div class="form-group">
-		<label for="message">Pregunta o comentario:</label>
-		<textarea type= "textarea" id="message" name="message" required></textarea>
-	  </div>
-	  <button type="submit">Enviar</button>
-	</form>
-  </section>
+<section id="registros">
+	<h2>Administrador de registros</h2>
+	<p>Regístrese a continuación y nos pondremos en contacto con usted.</p>
+	<a href="PruebaProgra3/index.html" target="_self"><button>Registros</button></a>
+
+  </section>  
   <section id="ubicacion">
 	<div class="container">
 	  <h2 class="section-title">¿Dónde estamos ubicados?</h2>
