--- a/LandingPageMacoem.html
+++ b/LandingPageMacoem.html
@@ -144,7 +144,7 @@
 <section id="registros">
 	<h2>Administrador de registros</h2>
 	<p>Regístrese a continuación y nos pondremos en contacto con usted.</p>
-	<a href="PruebaProgra3/index.html" target="_self"><button>Registros</button></a>
+	<a href="PruebaPrograuwu/index.html" target="_self"><button>Registros</button></a>
 
   </section>  
   <section id="ubicacion">
